app/globals.scss
body {
  margin: 0;
  font-family: var(--font), arial, helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 15px;
  color: #3e3e3e;
  overflow-y: auto;
}

html {
  scroll-behavior: smooth;
}
button {
  font-family: var(--font), arial, helvetica, sans-serif;
  font-size: 15px;
}

iframe {
  display: none;
}

p {
  margin-block-start: 0;
  margin-block-end: 0;
}

.page-container {
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  box-shadow: none;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: #3498db;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  background: #3498db;
}

.ReactModal__Overlay {
  opacity: 0;
  transition: opacity 1000ms ease-in-out;
  z-index: 99999;
  background-color: rgba(0, 0, 0, 0.75) !important;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

.ReactModal__Content {
  outline: none;
  margin: 0 10%;
  position: relative !important;
  top: 45% !important;
  transform: translateY(-45%);
}

.modal-open {
  overflow: hidden;
}

.prevent-refresh {
  overscroll-behavior-y: contain;
}

.contact-modal-content {
  margin: 0 30%;
}

.contact-form-status-modal-content {
  margin: 0 30%;
  display: flex;
  justify-content: center;
}

.hide {
  display: none !important;
}

* {
  box-sizing: border-box;
}

@import "~react-phone-number-input/style.css";
.modal-open {
  overflow: hidden;
}

